@@ -122,6 +122,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-16 mer. 05:24]--[2016-11-16 mer. 06:10] =>  0:46
      CLOCK: [2016-11-16 mer. 02:11]--[2016-11-16 mer. 02:39] =>  0:28
      CLOCK: [2016-11-16 mer. 01:52]--[2016-11-16 mer. 02:11] =>  0:19
      CLOCK: [2016-11-16 mer. 00:25]--[2016-11-16 mer. 00:54] =>  0:29
@@ -136,14 +137,24 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Do we need to search for boost.variant in cmake ?? NO
       - [X] Maybe a map of boost::variant
       - [X] Must throw error if key can't be found or not unique
-      - [ ] Exception must be correctly handle by subclasses	
-      - Must handle cast errors in a exception-based way
+      - [X] Exception must be correctly handle by subclasses	
+	- [X] Created
+        - [X] Must unit test Exception what text
+        - [X] Must handle cast errors in a exception-based way
+      - [ ] Must fully document StateSaver class and members
       - We can also handle CEGUI::Windows size and position and add
 	some typed ::apply(const str& name, Window*) functions.
       - [ ] Then we'll need two GameState pure virtual function
 	maybe save/load or ???/restore (what's the antonym)
       - [ ] Then implement them in MainMenu
 	save the visible state of NyiDialogs, positions of windows etc...
+      - [ ] Next thing is to handle GameEngine::reconfigure()
+	- [ ] Save current gamestate and serialize it
+        - [ ] Ogre startup process must stay in little members function
+	  so we exactly know the order of initialization
+        - [ ] Shutdown Ogre
+        - [ ] Change its fullscreen configuration (maybe save it to file)
+        - [ ] Restart Ogre an subsystem (OIS, CEGUI etc...)
 - [ ] It could be fine if this changes could be serialized in the same
   way Ogre does it. This way, at next startup, the Ogre config dialog
   would be defaulted to in-game options.
